--- a/src/app/user/components/user-list/user-list.component.html
+++ b/src/app/user/components/user-list/user-list.component.html
@@ -1,32 +1,43 @@
 <div class="container p-10">
-    <h3 class="d-flex align-items-center justify-content-center mt-20">Users Tasks</h3>
-    <button mat-raised-button class="mb-10 ml-10 bg-dark text-white" (click)="addUser()">Add User</button>
+    <h3 class="d-flex align-items-center justify-content-center mt-20">Tasks List</h3>
+    <button mat-raised-button class="mb-10 ml-10 bg-dark text-white" (click)="openSaveUserDialog('')">Add User</button>
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-            <!-- userId Column -->
-            <ng-container matColumnDef="userId">
-                <th mat-header-cell *matHeaderCellDef> No. </th>
-                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            <!-- title Column -->
+            <ng-container matColumnDef="title">
+                <th mat-header-cell *matHeaderCellDef> Title </th>
+                <td mat-cell *matCellDef="let element"> {{element.title}} </td>
             </ng-container>
 
-            <!-- firstName Column -->
-            <ng-container matColumnDef="firstName">
-                <th mat-header-cell *matHeaderCellDef> FirstName </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <!-- description Column -->
+            <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef> Description </th>
+                <td mat-cell *matCellDef="let element"> {{element.description}} </td>
             </ng-container>
 
-            <!-- lastName Column -->
-            <ng-container matColumnDef="lastName">
-                <th mat-header-cell *matHeaderCellDef> LastName </th>
-                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            <!-- status Column -->
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef> Status </th>
+                <td mat-cell *matCellDef="let element">
+                    @if(element.status === 'Todo'){
+                    <mat-icon color="primary">list</mat-icon>
+                    }
+                    @else if(element.status === 'Inprogress'){
+                    <mat-icon class="text-warning">hourglass_empty</mat-icon>
+                    } @else{
+                    <mat-icon class="text-success">check_circle</mat-icon>
+                    }
+                </td>
             </ng-container>
 
+            <!-- action Column -->
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef> Action </th>
                 <td mat-cell *matCellDef="let element">
-                    <mat-icon class="mr-5 pointer" (click)="addUser()">edit</mat-icon>
-                    <mat-icon class="mr-5 pointer" color="warn">delete</mat-icon>
+                    <mat-icon class="mr-5 pointer" (click)="openSaveUserDialog(element._id)">edit</mat-icon>
+                    <mat-icon class="mr-5 pointer" color="warn"
+                        (click)="openDeleteUserDialog(element._id)">delete</mat-icon>
                 </td>
             </ng-container>
 
