--- a/src/app/user/components/user/user.component.html
+++ b/src/app/user/components/user/user.component.html
@@ -27,9 +27,9 @@
         <mat-form-field class="form-field w-100 mt-10" appearance="outline">
             <mat-label>Status</mat-label>
             <mat-select matInput placeholder="Enter Status" formControlName="status">
-                <mat-option value="toDo">To Do</mat-option>
-                <mat-option value="inProgress">In Progress</mat-option>
-                <mat-option value="done">Done</mat-option>
+                <mat-option value="Todo">To Do</mat-option>
+                <mat-option value="Inprogress">In Progress</mat-option>
+                <mat-option value="Done">Done</mat-option>
             </mat-select>
             @if (
             hasError('description','required')
@@ -41,5 +41,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-raised-button color="white" (click)="cancelAddUser()">Cancel</button>
-    <button mat-raised-button class="bg-dark text-white" (click)="saveUser()">Save</button>
+    <button mat-raised-button class="bg-dark text-white" (click)="saveOrUpdateUser()">Save</button>
 </mat-dialog-actions>
