--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -93,3 +93,11 @@ $widthsInPx: 1000;
 .pointer {
     cursor: pointer;
 }
+
+.error-icon {
+    vertical-align: middle;
+    margin-right: 4px;
+    color: var(--primary)
+      /* or any color you prefer */
+  }
+  
