--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -4,7 +4,7 @@
             <mat-card-title> Login</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <form class="w-100 p-10 d-flex justify-content-center align-items-center flex-column"
+            <form class="w-100 gap-10 p-10 d-flex justify-content-center align-items-center flex-column"
                 [formGroup]="loginForm">
                 <!-- Email -->
                 <mat-form-field class="form-field w-75 mt-10" appearance="outline">
@@ -35,6 +35,15 @@
                     <mat-error>
                         <mat-icon class="error-icon">error</mat-icon>
                         Password is required</mat-error>
+                    }
+                    @else if (
+                    hasError('password','pattern')
+                    ) {
+                    <mat-error>
+                        <mat-icon class="error-icon">error</mat-icon>
+                        Password should be At least 8 characters in length,Lowercase letters,Uppercase letters,
+                        Numbers and Special characters
+                    </mat-error>
                     }
                 </mat-form-field>
                 <div class="w-75 mt-10 d-flex justify-content-end button-wrap">
