--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,18 @@
-<p>footer works!</p>
+<div class="footer d-flex justify-content-center align-items-center p-20">
+    <div class="d-flex justify-content-between w-75">
+        <div>
+            <img src="/assets/images/logo.png" class="width-60">
+            <p class="text-secondary"> &copy; 2024</p>
+        </div>
+        <div>
+            <span class="fw-bold text-white">Version</span>
+            <p class="text-secondary">2.2.2</p>
+        </div>
+        <div>
+            <span class="fw-bold text-white">About</span>
+            <div class="text-secondary">Contact Us</div>
+            <div class="text-secondary">Privacy</div>
+            <div class="text-secondary">Terms of Use</div>
+        </div>
+    </div>
+</div>
