--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -5,6 +5,7 @@
   min-height: 53px;
   margin-bottom: 20px;
   box-shadow: 0 0 20px rgba(300, 0, 0, 0.1);
+  background-color: var(--darkBlue) !important;
 
   & .icon {
     font-size: 20px;
