--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -6,4 +6,6 @@
     --purple: #cfcbeb;
     --red: #ff0000;
     --whitesmoke: #f5f5f5;
+    --bgColor: radial-gradient(circle, #0a0f2d, #1b2b47, #2d4761, #3e637b, #506f95);
+    --darkBlue: #1b2b47;
 }
