--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -1,43 +1,1 @@
-/* Ensure the card is responsive */
-.card {
-    max-width: 100%;
-    width: 75%;
-    margin: 0 auto;
-}
-
-/* Adjust the form fields and card content on small screens */
-@media (max-width: 600px) {
-    .card {
-        width: 95%;
-    }
-
-    .form-field {
-        width: 100% !important;
-        margin-top: 20px;
-    }
-
-    .button-wrap {
-        width: 100% !important;
-        margin-top: 40px !important;
-    }
-
-    .error-icon {
-        vertical-align: middle;
-    }
-
-    mat-error {
-        white-space: normal !important;
-        word-wrap: break-word !important;
-        display: block;
-        line-height: 1.2;
-    }
-
-    mat-card-content {
-        padding-bottom: 16px;
-    }
-
-    .card {
-        padding: 16px;
-        overflow-y: auto;
-    }
-}
+@import url('../../../../assets/styles/auth.scss');
