--- a/src/app/task/components/task-list/task-list.component.html
+++ b/src/app/task/components/task-list/task-list.component.html
@@ -1,9 +1,7 @@
-<div class="container p-10">
-    <h3 class="d-flex align-items-center justify-content-center mt-20">Tasks List</h3>
-    <button mat-raised-button class="mb-10 ml-10 bg-dark text-white" (click)="openSaveUserDialog('')">Add User</button>
-    <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
+<div class="container mb-10">
+    <button mat-raised-button color="white" (click)="openaddTaskDialog()" class="m-10">Add Task</button>
+    <div class="table-container">
+        <table mat-table [dataSource]="dataSource" class="example-table">
             <!-- title Column -->
             <ng-container matColumnDef="title">
                 <th mat-header-cell *matHeaderCellDef> Title </th>
@@ -35,15 +33,15 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef> Action </th>
                 <td mat-cell *matCellDef="let element">
-                    <mat-icon class="mr-5 pointer" (click)="openSaveUserDialog(element._id)">edit</mat-icon>
+                    <mat-icon class="mr-5 pointer icon" (click)="openaddTaskDialog(element._id)">edit</mat-icon>
                     <mat-icon class="mr-5 pointer" color="warn"
-                        (click)="openDeleteUserDialog(element._id)">delete</mat-icon>
+                        (click)="openDeleteTaskDialog(element._id)">delete</mat-icon>
                 </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
     </div>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of tasks"></mat-paginator>
 </div>
