--- a/src/app/task/components/task-list/task-list.component.html
+++ b/src/app/task/components/task-list/task-list.component.html
@@ -1,22 +1,28 @@
-<div class="container mb-10">
+<div class="container mb-20">
+    <h1 class="text-white text-center">Task Management System</h1>
     <button mat-raised-button color="white" (click)="openaddTaskDialog()" class="m-10">Add Task</button>
+    <mat-form-field class="w-100">
+        <mat-label>Search</mat-label>
+        <input matInput (keyup)="searchTask($event)" #input>
+    </mat-form-field>
     <div class="table-container">
-        <table mat-table [dataSource]="dataSource" class="example-table">
+        <table mat-table [dataSource]="dataSource" class="example-table" matSort matSortActive="created"
+            matSortDisableClear matSortDirection="desc">
             <!-- title Column -->
             <ng-container matColumnDef="title">
-                <th mat-header-cell *matHeaderCellDef> Title </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
                 <td mat-cell *matCellDef="let element"> {{element.title}} </td>
             </ng-container>
 
             <!-- description Column -->
             <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef> Description </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
                 <td mat-cell *matCellDef="let element"> {{element.description}} </td>
             </ng-container>
 
             <!-- status Column -->
             <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef> Status </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
                 <td mat-cell *matCellDef="let element">
                     @if(element.status === 'Todo'){
                     <mat-icon color="primary">list</mat-icon>
@@ -33,7 +39,8 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef> Action </th>
                 <td mat-cell *matCellDef="let element">
-                    <mat-icon class="mr-5 pointer icon" (click)="openaddTaskDialog(element._id)">edit</mat-icon>
+                    <mat-icon class="mr-5 pointer text-primary-wrap"
+                        (click)="openaddTaskDialog(element._id)">edit</mat-icon>
                     <mat-icon class="mr-5 pointer" color="warn"
                         (click)="openDeleteTaskDialog(element._id)">delete</mat-icon>
                 </td>
@@ -41,6 +48,11 @@
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data found</td>
+            </tr>
         </table>
     </div>
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of tasks"></mat-paginator>
