--- a/src/app/task/components/task/task.component.html
+++ b/src/app/task/components/task/task.component.html
@@ -42,5 +42,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-raised-button color="white" (click)="cancelAddTask()">Cancel</button>
-    <button mat-raised-button class="btn text-white" (click)="saveOrUpdateTask()">Save</button>
+    <button mat-raised-button class="bg-primary-wrap text-white" (click)="saveOrUpdateTask()">Save</button>
 </mat-dialog-actions>
