--- a/src/app/auth/components/signup/signup.component.html
+++ b/src/app/auth/components/signup/signup.component.html
@@ -1,6 +1,7 @@
-<div class="d-flex align-items-center justify-content-center justify-content-lg-start auth-wrap flex-column">
-    <h1 class="mb-10 text-white">Sign Up</h1>
-    <mat-card class="w-50 card">
+<div class="d-flex align-items-center justify-content-center justify-content-lg-start auth-wrap flex-column
+position-relative">
+    <h2 class="mb-10 text-white"><mat-icon>person_add</mat-icon> Sign Up</h2>
+    <mat-card class="w-50 card overflow-auto position-relative">
         <mat-card-content>
             <form class="w-100 p-10 gap-10 d-flex justify-content-center align-items-center flex-column"
                 [formGroup]="signupForm">
@@ -52,7 +53,10 @@
                 <!-- password -->
                 <mat-form-field class="form-field w-75" appearance="outline">
                     <mat-label>Password</mat-label>
-                    <input matInput placeholder="Enter Password" formControlName="password">
+                    <input matInput placeholder="Enter Password" formControlName="password" type="{{fieldTextType}}">
+                    <button matSuffix mat-icon-button aria-label="Clear" (click)="toggleFieldType()">
+                        <mat-icon>{{this.showPassword ? 'visibility_off' :'visibility'}}</mat-icon>
+                    </button>
                     @if (
                     hasError('password','required')
                     ) {
@@ -71,7 +75,7 @@
                     }
                 </mat-form-field>
                 <div class="w-75 mt-10 d-flex justify-content-end button-wrap">
-                    <button mat-raised-button class="btn text-white" (click)="save()">Save</button>
+                    <button mat-raised-button class="bg-primary-wrap text-white" (click)="save()">Save</button>
                 </div>
             </form>
         </mat-card-content>
