--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -14,6 +14,11 @@
   & .navbar-right-wrap {
     display: flex;
     align-items: center;
+
+    .logout-icon {
+      padding: 18px !important;
+      border-radius: 20px !important;
+    }
   }
 }
 
@@ -24,6 +29,7 @@
   transform: translateX(100%);
   transition: right 0.3s ease;
   z-index: 1111;
+  background-color: var(--darkBlue);
 
   & .navbar-nav {
     & .nav-item {
