Fix(App): Fixed issues

--- a/src/app/task/components/task-list/task-list.component.scss
+++ b/src/app/task/components/task-list/task-list.component.scss
@@ -10,6 +10,13 @@
   overflow: auto;
 }
 
+.mat-mdc-no-data-row {
+  .mat-cell {
+    padding: 20px;
+    text-align: center;
+  }
+}
+
 table {
   width: 100%;
 }
