--- a/src/app/task/components/task-list/task-list.component.html
+++ b/src/app/task/components/task-list/task-list.component.html
@@ -51,7 +51,7 @@
 
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No data found</td>
+                <td class="mat-cell" colspan="4">No task found</td>
             </tr>
         </table>
     </div>
